Ajustes nos scripts
-Segunda tentativa de destruir corretamente o timer da prisão
-Comandos para obter armas removidos (Ammu-Nations funcionam)
-Corrigido o nome da pasta para "gamemodes"

--- a/server.cfg
+++ b/server.cfg
@@ -1,7 +1,7 @@
 echo Executing Server Config...
 lanmode 0
 rcon 1
-rcon_password davisicilio
+rcon_password Davisicilio%%
 maxplayers 30
 port 7070
 hostname S70
